# termdock

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  makefile
docker/include/: container.hpp  docker.hpp
docker/src/: container.cpp  continers.cpp
graphical/include/: panel.hpp  terminal.hpp  window.hpp
graphical/src/: panel.cpp  terminal.cpp  window.cpp
